--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,76 +1,100 @@
 .firstDiv {
-    background-image: url(/assets/img/gallery00-1200x800.jpg);
-    width: 100%;
-    height: 80rem;
-    background-position: center;
-    background-size: cover;
+  width: 100%;
+  height: 80rem;
+  background-position: center;
+  background-size: cover;
+  background-image: url(../img/gallery00-1200x800.jpg);
 }
 
 .secondDiv {
-    background-image: linear-gradient(45deg,rgb(255 214 44), rgb(253 230 112), rgb(254 225 95), rgb(250 193 0));
-    width: 100%;
-    height: 7rem;
+  background-image: linear-gradient(
+    45deg,
+    rgb(255 214 44),
+    rgb(253 230 112),
+    rgb(254 225 95),
+    rgb(250 193 0)
+  );
+  width: 100%;
+  height: 7rem;
 }
 
-.btn {
-    animation-name: color_change;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+.btnShopNow {
+  animation-name: color_change;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  width: 12rem;
 }
 
 @keyframes color_change {
-    0% {
-        background-color: red;
-    }
+  0% {
+    background-color: red;
+  }
 
-    50% {
-        background-color: yellow;
-    }
+  50% {
+    background-color: yellow;
+  }
 
-    100% {
-        background-color: green;
-    }
+  100% {
+    background-color: green;
+  }
 }
 
 .navbar {
-    background-image: linear-gradient(45deg,rgb(255 214 44), rgb(253 230 112), rgb(254 225 95), rgb(250 193 0));
+  background-image: linear-gradient(
+    45deg,
+    rgb(255 214 44),
+    rgb(253 230 112),
+    rgb(254 225 95),
+    rgb(250 193 0)
+  );
 }
 
 .font-size-kris {
-    font-size: 1.4rem;
-    letter-spacing: 0.2rem;
+  font-size: 1.4rem;
+  letter-spacing: 0.2rem;
 }
 
-
 .navbar-brand {
-    font-size: 1.5rem !important;
-    letter-spacing: 0.2rem;
+  font-size: 1.5rem !important;
+  letter-spacing: 0.2rem;
 }
 
 ::-webkit-scrollbar {
-    width: 1rem;
+  width: 1rem;
 }
- 
+
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
 }
- 
+
 ::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  background-color: darkgrey;
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-.img-cards {
-    width: 220px !important;
+.nav-link:hover {
+  background-image: linear-gradient(
+    180deg,
+    rgb(255 214 44),
+    rgb(253 230 112),
+    rgb(254 225 95),
+    rgb(250 193 0)
+  );
 }
 
-.nav-link:hover, .dropdown-item:hover {
-    background-image: linear-gradient(180deg,rgb(255 214 44), rgb(253 230 112), rgb(254 225 95), rgb(250 193 0));
+.dropdown-item:hover {
+  background-image: linear-gradient(
+    180deg,
+    rgb(255 214 44),
+    rgb(253 230 112),
+    rgb(254 225 95),
+    rgb(250 193 0)
+  );
 }
 
 .dropdown-menu {
-    background-image: linear-gradient(180deg, rgb(253 230 112), rgb(254 225 95));
+  background-image: linear-gradient(180deg, rgb(253 230 112), rgb(254 225 95));
 }
