--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,19 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 9rem !important;
+}
+
+.footer {
+  height:9rem; 
+  position: absolute; 
+  bottom: 0;
+  width: 100%;
+}
+
 .firstDiv {
   width: 100%;
   height: 80rem;
@@ -6,7 +22,7 @@
   background-image: url(../img/gallery00-1200x800.jpg);
 }
 
-.secondDiv {
+.secondDiv, .thirdDiv {
   background-image: linear-gradient(
     45deg,
     rgb(255 214 44),
@@ -65,14 +81,14 @@
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .nav-link:hover {
